--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next-i18next": "^11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-dropzone": "^14.2.1",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
