--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-dropzone": "^14.2.1",
-    "react-icons": "^4.3.1"
+    "react-elastic-carousel": "^0.11.5",
+    "react-icons": "^4.3.1",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "eslint": "8.11.0",
