--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dropzone": "^14.2.1",
     "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.3.1",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "8.11.0",
