--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "next": "12.1.0",
     "next-i18next": "^11.0.0",
     "react": "17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
-    "react-dropzone": "^14.2.1",
     "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.3.1",
     "styled-components": "^5.3.5",
