--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
-  "name": "recipes_app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "firebase": "^9.6.9",
-    "next": "12.1.0",
-    "next-i18next": "^11.0.0",
-    "react": "17.0.2",
-    "react-beautiful-dnd": "^13.1.0",
-    "react-dom": "17.0.2",
-    "react-elastic-carousel": "^0.11.5",
-    "react-icons": "^4.3.1",
-    "styled-components": "^5.3.5",
-    "uuid": "^8.3.2"
-  },
-  "devDependencies": {
-    "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0",
-    "eslint-plugin-react": "^7.29.4"
-  }
+	"name": "recipes_app",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@types/react": "^18.0.12",
+		"@types/react-dom": "^18.0.1",
+		"firebase": "^9.6.9",
+		"next": "12.1.0",
+		"next-i18next": "^11.0.0",
+		"react": "^18.1.0",
+		"react-dnd": "^16.0.1",
+		"react-dnd-html5-backend": "^16.0.1",
+		"react-dom": "17.0.2",
+		"react-elastic-carousel": "^0.11.5",
+		"react-icons": "^4.3.1",
+		"styled-components": "^5.3.5",
+		"uuid": "^8.3.2"
+	},
+	"devDependencies": {
+		"eslint": "8.11.0",
+		"eslint-config-next": "12.1.0",
+		"eslint-plugin-react": "^7.29.4"
+	}
 }
