--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	"devDependencies": {
 		"eslint": "8.11.0",
 		"eslint-config-next": "12.1.0",
-		"eslint-plugin-react": "^7.29.4"
+		"eslint-plugin-react": "^7.29.4",
+		"eslint-plugin-react-hooks": "^4.5.0"
 	}
 }
