--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
 		"react-elastic-carousel": "^0.11.5",
 		"react-icons": "^4.3.1",
 		"styled-components": "^5.3.5",
-		"uuid": "^8.3.2",
-		"yup": "^0.32.11"
+		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
 		"eslint": "8.11.0",
